[metadata]
license_file = LICENSE

[flake8]
application-import-names = mink
exclude = .eggs,.git,.idea,.pytest_cache,.tox,*.egg-info,build,dist
import-order-style = smarkets
max-complexity = 7
max-line-length = 120

[tool:pytest]
addopts = --color=yes --doctest-modules
minversion = 3.5
norecursedirs = .eggs .git .idea .pytest_cache .tox *.egg-info build dist
